Vulnerability fix for json logback spring